<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <groupId>io.github.taybct</groupId>
        <artifactId>spring-taybct</artifactId>
        <version>3.5.2</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <groupId>io.github.taybct</groupId>
    <artifactId>spring-taybct-admin</artifactId>
    <version>3.5.2</version>
    <name>${project.artifactId}</name>
    <packaging>pom</packaging>
    <description>管理模块</description>
    <url>https://github.com/taybct/spring-taybct</url>

    <licenses>
        <license>
            <name>The Apache Software License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
        </license>
    </licenses>

    <organization>
        <name>io.github.taybct</name>
        <url>https://github.com/taybct</url>
    </organization>

    <developers>
        <developer>
            <id>crisp</id>
            <name>Mango Crisp</name>
            <email>15014633363@163.com</email>
            <url>https://mangocrisp.github.io</url>
            <roles>
                <role>Project Manager</role>
                <role>Architect</role>
            </roles>
            <organization>io.github.taybct</organization>
            <organizationUrl>https://github.com/taybct</organizationUrl>
            <timezone>Asia/Shanghai</timezone>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:https://github.com/taybct/spring-taybct.git</connection>
        <developerConnection>scm:git:https://github.com/taybct/spring-taybct.git</developerConnection>
        <url>https://github.com/taybct/spring-taybct</url>
    </scm>

    <modules>
        <module>spring-taybct-admin-log</module>
        <module>spring-taybct-admin-file</module>
        <module>spring-taybct-admin-monitor</module>
        <module>spring-taybct-admin-websocket</module>
    </modules>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <maven.compiler.release>21</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

</project>
